# meridian

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  actions.md  hf_app.py  overview.md  plan-intro.md  plan.md  project-specs.md  pyproject.toml  requirements.txt  test-data.md
app/: main.py
app/api/: router.py
app/api/routes/: chat.py  health.py
app/core/: config.py
app/mcp/: client.py
app/schemas/: chat.py  mcp.py
app/services/: chat_service.py  exceptions.py
app/ui/: gradio_app.py
tests/: test_chat_route.py  test_chat_service.py  test_gradio_app.py  test_mcp_client.py
