[project]
name = "meridian-api"
version = "0.1.0"
description = "FastAPI backend scaffold for Meridian support automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[tool.uv]
package = false